--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,4 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+.title{
+    color: rgb(199, 21, 21);
+    margin-top: 30px;
+    text-align: center;
+}
+
+.container{
+    width: 80%;
+    margin-top:50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
