--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.clearfix {
+.clearfix::after {
     content: "";
     display: block;
     clear: both;
@@ -65,6 +65,10 @@ img{
     margin: 0 -1rem;
 }
 
+.row-second{
+    margin-top: 30px;
+}
+
 .image{
     width: 25%;
     height: 100px;
@@ -74,12 +78,27 @@ img{
 .generality{
     width: 70%;
     height: 100px;
-    background-color: greenyellow;
     float: right;
 }
 
-.second{
-    margin-top: 30px;
+.name{
+    margin-top: 10px;
 }
+
+.h3{
+    color: white;
+}
+
+.work{
+    color: white;
+    margin-top: 10px;
+}
+
+.mail{
+    margin-top: 10px;
+    color: rgb(59, 59, 183);
+}
+
+
 
 
